[package]
name = "decs"
version = "0.1.0"
edition = "2021"
description = "Dive into ECS: interactive ecs exec helper."
license = "MIT"
repository = "https://github.com/fastmedia/decs"
keywords = ["aws", "ecs", "cli", "container"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
inquire = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ecs = { version = "1.26", features = ["behavior-version-latest"] }
aws-types = "1.3"
